<resources>
    <string name="app_name">DocSaver</string>
    <string name="tag_line">A place to save your docs freely</string>
    <string name="recycler_main">ListOfDocuments</string>
    <string name="fab_upload_doc">Add documents!</string>

    <string name="login_text">Login!</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="resend_email">Resend Verification Email</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>

    <string name="help_activity">Help and Support</string>
    <string name="start">Getting Started</string>
    <string name="start_menu">• To upload a document, tap the + button.\n• Choose a category and give it a name.\n• Tap Save to upload.</string>
    <string name="manage_doc">Managing Documents</string>
    <string name="managing_docs">• Tap a document to open it.\n• Use the ⋮ menu to rename, download, share, or delete.\n• Swipe left/right to delete (with Undo option).\n• Tap the heart icon to mark as Favourite.</string>
    <string name="trouble">Troubleshooting</string>
    <string name="trouble_text">• If documents don’t appear, check your internet connection.\n• Make sure you’re logged in.\n• If upload fails, try again with a stable connection.</string>
    <string name="contact">Contact Support</string>
    <string name="contact_support">Contact Us</string>

    <string name="forgot_re_enter_pin">Re-enter your new PIN</string>
    <string name="reset_pin_btn">Reset PIN</string>

    <string name="register_email">Enter your registered email</string>
    <string name="reset_link">Send Reset Link</string>
    <string name="next_btn">Next</string>

    <string name="masked_pin">PIN : ****</string>
    <string name="dob_error">Please select a valid DOB(no future dates)</string>
    <string name="email_label">Email : %1$s</string>
    <string name="password_label">Password : ********</string>
    <string name="name_label">Name : %1$s</string>
    <string name="dob_label">DOB : %1$s</string>
    <string name="gender_label">Gender : %1$s</string>
    <string name="phone_label">Phone : %1$s</string>
    <string name="load_dob_error">Please select a valid DOB before saving.</string>

    <string name="save_doc">Save document as</string>
    <string name="save_doc_subtitle">Enter the name of your document:</string>
    <string name="save_doc_edt">e.g. College_ID, Aadhaar</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="rename_edt">Enter new name</string>

    <string name="icon">icon</string>
    <string name="favourite">Favorite</string>
    <string name="doc_name">Document Name</string>
    <string name="opt_menu">Options menu</string>

    <string name="confirm_pass">Confirm Password</string>
    <string name="re_enter_pass">Re-enter your password</string>
    <string name="enter_pass">Enter your password</string>

    <string name="confirm_btn">Confirm</string>

    <string name="rename_doc">Rename Document</string>

    <string name="update_pin">Update PIN</string>
    <string name="old_pin">Enter your old PIN</string>
    <string name="new_pin">Enter your new PIN</string>
    <string name="re_enter_pin">Re-enter your new PIN</string>

    <string name="login_msg">Already a user? Login!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="enter_email">Enter your email</string>
    <string name="sign_btn">Sign Up</string>

    <string name="settings_label">Settings</string>
    <string name="name_text">Name</string>
    <string name="my_acc">My Account</string>
    <string name="security">Security</string>
    <string name="del_acc">Delete Account</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="pin">PIN</string>
    <string name="forgot_pin">Forgot PIN</string>
    <string name="search_label">Search Place</string>
    <string name="search_text">Search your documents</string>

    <string name="profile">Profile</string>
    <string name="edt_details">Edit Details</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="gender">Gender:</string>
    <string name="dob">DOB:</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="personal_details">Add your personal details</string>
    <string name="enter_dob">Enter your DOB</string>
    <string name="dob_text">Invalid date of birth</string>
    <string name="select_gender">Select your gender</string>
    <string name="enter_no">Enter your number</string>
    <string name="save_details">Save Details</string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="set_pin">Set your PIN</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="re_enter_mpin">Re-enter your PIN</string>
    <string name="set_pin_btn">Set PIN</string>

    <string name="update_details_btn">Update Details</string>
    <string name="edit_details_activity">Edit your personal details</string>

    <string name="del_acc_text">Hello user! Deleting this account will lead to deleting all the documents you have saved here. Once you delete the account you will not be able to log back in.</string>
    <string name="confirm_del">Are you sure you want to delete this account?</string>

    <string name="update_pass">Update Password</string>
    <string name="current_pass">Enter your current password</string>
    <string name="new_pass">Enter your new password</string>
    <string name="re_enter_new_pass">Re-enter your new password</string>
    <string name="docsaver_does">What DocSaver does?</string>
    <string name="docsaver_text">DocSaver helps you securely store, organize, and manage your important documents in one place. Upload files like ID proofs, certificates, finance docs and access them anytime.</string>
    <string name="features">Features</string>
    <string name="features_text">• Upload and store PDFs and images\n• Categorize documents (ID Proof, Education, Finance, Work, Others)\n• Mark documents as Favourites\n• Search documents by name\n• Download, share, or rename documents\n• Swipe-to-delete with Undo\n• Secure Firebase storage</string>
    <string name="privacy_security">Privacy and Security</string>
    <string name="privacy_security_text">Your documents are stored securely using Firebase. Only you can access your uploaded files with your login credentials. We don’t share your files with third parties.</string>
    <string name="developer">Developer</string>
    <string name="developed">Developed by Priyanka Taduri\nVersion: 1.0</string>


    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="doc_categories">
        <item>ID Proof</item>
        <item>Education</item>
        <item>Finance</item>
        <item>Work</item>
        <item>Others</item>
    </string-array>


</resources>