<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_activity"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <!-- Section 1 -->
        <TextView
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/start_menu"
            android:textSize="20sp"
            android:lineSpacingExtra="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp" />

        <!-- Section 2 -->
        <TextView
            android:text="@string/manage_doc"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/managing_docs"
            android:textSize="20sp"
            android:lineSpacingExtra="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp" />

        <!-- Section 3 -->
        <TextView
            android:text="@string/trouble"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/trouble_text"
            android:textSize="20sp"
            android:lineSpacingExtra="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp" />

        <!-- Section 4 -->
        <TextView
            android:text="@string/contact"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btnContactSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_support"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/lavender" />

    </LinearLayout>
</ScrollView>
