<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialogTitle"
        android:text="@string/rename_doc"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_doc_subtitle"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/inputDocName"
        android:hint="@string/rename_edt"
        android:autofillHints="name"
        android:inputType="text"
        android:background="@drawable/custom_edit_text"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_label"
                android:background="@color/white"
                android:textColor="#6200EE"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_label"
                android:textColor="#6200EE"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
</LinearLayout>
