<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pass"
        app:drawableStartCompat="@drawable/ic_action_name"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_pass"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPass"
        android:hint="@string/enter_pass"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_action_name"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:background="@color/white"
            android:textColor="#6200EE"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            android:textColor="#6200EE"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>


</LinearLayout>