<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/profileImageView"
            android:src="@drawable/ic_myacc"
            app:civ_border_color="@color/lavender"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:backgroundTint="#FFFFFF"
        android:padding="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewname"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewdob"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewgender"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewphone"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewemail"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:gravity="center">

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtdetails"
                    android:backgroundTint="@color/lavender"
                    android:layout_marginTop="15dp"
                    android:text="@string/edt_details"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>