<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccount"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="40dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_acc"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showemail"
        android:textColor="@color/black"
        android:text="@string/email_text"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showpassword"
        android:textColor="@color/black"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    


</LinearLayout>