<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAccount"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_acc"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_acc_text"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteaccount"
        android:text="@string/confirm_del"
        android:textSize="20sp"
        android:contextClickable="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/lavender"
        android:textStyle="bold"/>





</LinearLayout>