<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/forgotemail"
            android:ems="14"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/register_email"
            android:textSize="20sp"
            android:background="@drawable/custom_edit_text"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_action_mail"
            android:drawablePadding="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetlink"
            android:text="@string/reset_link"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/lavender"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>